Add notebook and comprehend dataset

--- a/rga_ai_lab_airbnb.ipynb
+++ b/rga_ai_lab_airbnb.ipynb
@@ -22,7 +22,8 @@
     "import botocore\n",
     "import os\n",
     "import re\n",
-    "import logging\n"
+    "import logging\n",
+    "import time\n"
    ]
   },
   {
@@ -141,7 +142,7 @@
     "    except ClientError as e:\n",
     "        logging.error(e)\n",
     "        return False\n",
-    "    return True\n",
+    "    return print(bucket + ' bucket created successfully!')\n",
     "\n",
     "create_bucket(bucket, region)"
    ]
@@ -153,7 +154,7 @@
    "outputs": [],
    "source": [
     "#Inspect the dataset. We are reviewing only the first two entries.\n",
-    "!ls comprehend/\n",
+    "!ls comprehend/ -la\n",
     "!head comprehend/airbnb-reviews-training.csv -n 2\n",
     "\n",
     "# Note that the data has two columns, the first is a custom label for 'great' and 'notgreat' to indicate\n",
@@ -188,7 +189,7 @@
     "    except ClientError as e:\n",
     "        logging.error(e)\n",
     "        return False\n",
-    "    return True\n",
+    "    return print(file_name + ' uploaded successfully!')\n",
     "\n",
     "upload_file('comprehend/airbnb-reviews-training.csv', bucket)\n",
     "upload_file('comprehend/airbnb-reviews-holdout.csv', bucket)\n"
@@ -211,8 +212,7 @@
     "            \"s3:PutObject\"\n",
     "        ],\n",
     "        \"Resource\": [\n",
-    "            \"arn:aws:s3:::rga-aws-ai-workshop-pod-9999\",\n",
-    "            \"arn:aws:s3:::rga-aws-ai-workshop-pod-9999\"\n",
+    "            \"arn:aws:s3:::bucketname\"\n",
     "        ]\n",
     "    }\n",
     "}\n",
@@ -251,7 +251,7 @@
     "docclassifierarn = create_response['DocumentClassifierArn']\n",
     "describe_response = client.describe_document_classifier(\n",
     "    DocumentClassifierArn=docclassifierarn)\n",
-    "print('Describe response:\\n' + str(describe_response))\n"
+    "print('\\nDescribe response:\\n' + str(describe_response))\n"
    ]
   },
   {
@@ -262,12 +262,15 @@
    "source": [
     "# Check the status of the classifier\n",
     "# Look for a status on TRAINED before moving to the next step\n",
-    "describe_response = client.describe_document_classifier(\n",
-    "    DocumentClassifierArn=docclassifierarn)\n",
-    "print('Describe response:\\n' + str(describe_response))\n",
+    "describe_response = client.describe_document_classifier(DocumentClassifierArn=docclassifierarn)\n",
+    "print('Document classifier status:')\n",
+    "print(describe_response['DocumentClassifierProperties']['Status'])\n",
+    "while describe_response['DocumentClassifierProperties']['Status'] != 'TRAINED':\n",
+    "    time.sleep(20)\n",
+    "    describe_response = client.describe_document_classifier(DocumentClassifierArn=docclassifierarn)\n",
+    "    print(describe_response['DocumentClassifierProperties']['Status'])\n",
     "\n",
-    "if describe_response['DocumentClassifierProperties']['Status'] == 'TRAINED':\n",
-    "    print('\\n\\nCustom Model Accuracy:\\n' + str(describe_response['DocumentClassifierProperties']['ClassifierMetadata']['EvaluationMetrics']))\n",
+    "print('\\nCustom Model Accuracy:\\n' + str(describe_response['DocumentClassifierProperties']['ClassifierMetadata']['EvaluationMetrics']))\n",
     "\n",
     "# Alternatively please review the Comprehend AWS Console GUI to validate if your custom job is still training"
    ]
@@ -300,7 +303,7 @@
     "\n",
     "# Check the status of the job\n",
     "describe_response = client.describe_document_classification_job(JobId=start_response['JobId'])\n",
-    "print(\"Describe response:\\n\", describe_response)\n"
+    "print(\"\\nDescribe response:\\n\", describe_response)\n"
    ]
   },
   {
@@ -312,7 +315,12 @@
     "# Check the status of the job.\n",
     "# When JobStatus is COMPLETED you can move to the next step.\n",
     "describe_response = client.describe_document_classification_job(JobId=start_response['JobId'])\n",
-    "print(\"Describe response:\\n\", describe_response)"
+    "print('Job training status:')\n",
+    "print(describe_response['DocumentClassificationJobProperties']['JobStatus'])\n",
+    "while describe_response['DocumentClassificationJobProperties']['JobStatus'] != 'COMPLETED':\n",
+    "    time.sleep(10)\n",
+    "    describe_response = client.describe_document_classification_job(JobId=start_response['JobId'])\n",
+    "    print(describe_response['DocumentClassificationJobProperties']['JobStatus'])"
    ]
   },
   {
@@ -353,11 +361,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "isConfigCell": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:iam::969219788367:role/service-role/AmazonSageMaker-ExecutionRole-20181112T160917\n",
+      "rga-aws-ai-workshop-pod-9999\n"
+     ]
+    }
+   ],
    "source": [
     "import sagemaker\n",
     "from sagemaker import get_execution_role\n",
@@ -372,9 +389,12 @@
     "role = get_execution_role()\n",
     "print(role) # This is the role that SageMaker would use to leverage AWS resources (S3, CloudWatch) on your behalf\n",
     "\n",
-    "bucket = \"sagemaker-us-east-2-969219788367\" # Replace with your own bucket name if needed\n",
-    "print(bucket)\n",
-    "prefix = 'blazingtext/supervised' #Replace with the prefix under which you want to store the data if needed"
+    "pod = '9999'\n",
+    "region = 'us-east-2'\n",
+    "prefix = 'blazingtext' #we will store the dataset we will use to train a custom classification classifier\n",
+    "\n",
+    "bucket = \"rga-aws-ai-workshop-pod-\" + pod # Replace with your own bucket name if needed\n",
+    "print(bucket)"
    ]
   },
   {
@@ -390,30 +410,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 820\r\n",
+      "drwxrwxr-x 2 ec2-user ec2-user   4096 Oct 16 01:16 .\r\n",
+      "drwxrwxrwx 5 ec2-user ec2-user   4096 Oct 16 01:16 ..\r\n",
+      "-rw-rw-r-- 1 ec2-user ec2-user     18 Oct 16 01:16 classes.txt\r\n",
+      "-rw-rw-r-- 1 ec2-user ec2-user  22881 Oct 16 01:16 test.csv\r\n",
+      "-rw-rw-r-- 1 ec2-user ec2-user 799616 Oct 16 01:16 train.csv\r\n"
+     ]
+    }
+   ],
    "source": [
-    "#!wget https://github.com/saurabh3949/Text-Classification-Datasets/raw/master/dbpedia_csv.tar.gz\n",
     "\n",
     "labels_file = \"classes.txt\"\n",
     "train_file = \"train.csv\"\n",
     "test_file = \"test.csv\"\n",
     "\n",
-    "s3 = boto3.resource('s3')\n",
-    "s3.Bucket(bucket).download_file(labels_file, labels_file)\n",
-    "s3.Bucket(bucket).download_file(train_file, train_file)\n",
-    "s3.Bucket(bucket).download_file(test_file, test_file)\n",
-    "!ls -la\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!tar -xzvf dbpedia_csv.tar.gz"
+    "!ls {prefix} -la\n"
    ]
   },
   {
@@ -425,12 +444,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "﻿0,\"Explore Logan Square from Renovated Condo with Free Parking\",\"The apartment was lovely and the beds were very comfortable. I was traveling with 3 younger girls (12, 11, and 11) and I loved that the location was near plenty of coffee shops, restaurants, and parks. The area is definitely a mix of lower to mid income residents and students. With plenty of funky, high end, hipster spots. We felt very safe walking the neighborhood. And we had plenty of room in the space to spread out! The biggest plus was the free parking. Leo and Alex were gracious enough to allow us to use the lot a bit early, before check in, and a bit later, after check out. All things were accessible by Uber in 5 minutes or so. ~20 Uber ride to downtown. I would definitely give this spot another visit and recommend it to others.\"\r",
+      "\r\n",
+      "0,\"Explore Logan Square from Renovated Condo with Free Parking\",\"Our family enjoyed the space. The check-in process was easy. The photos and description are accurate. The house was very clean. It’s very nice that it has a private parking space. The parking is at the back and there is a narrow pathway next to the house where you can walk from the parking lot to the front door. This can be a bit inconvenient if you are carrying many luggage. We love the kitchen and dinning area where we cooked breakfast and heated up leftovers. The only thing is the air condition was quite loud. But we don’t get too much noise in the bedrooms.\"\r",
+      "\r\n",
+      "0,\"Foodie Paradise in Logan Square area - Sunny 1 BDR\",\"This one bedroom apartment is an Air BnBer’s dream. We have stayed in Air BnBs around the world and this is among the best. - Clearly, the home’s owner thought through everything that a guest might need. We arrived to find coffee and tea waiting, which was perfect after a long day of travel. - The apartment is clean, spacious, well located and very, very comfortable. It is the best Ikea styling I have ever seen in real life. In fact, Ikea would do well to stage a photo shoot here. The furniture, the decoration, the artwork are all simple, yet we felt like we could move right in and live here as a forever home. - •\tThe bed is like a cozy nest (loved the pillows). - •\tThe kitchen (and the fridge in particular) were sparkling clean. It was stocked with more than the basics, which was great since we always shop for breakfast food when we arrive in a new city, and found a Trader Joe’s quite nearby. - •\tThere is a little office with many kinds of connectors for phones and computers - •\tThe living room couch is really comfortable, and there’s a lap blanket for cuddling up. - •\tThe bathroom was outfitted with much more than we needed. The towels were soft and fluffy and there were plenty of them. - •\tThe lights and heat are controlled by a Nest system with sensors to turn lights come on and off as you enter and leave a room. That no doubt helps with the energy use but it takes a little human adjustment We ended up taping over the bathroom light sensor so it didn’t blast on in the middle of the night when one of us wandered into the bathroom. - •\tThe building is on a busy main street, which concerned us as we arrived -- I am very sensitive to noise. But once inside, the apartment is completely quiet. If the weather had been warm enough to open windows, it might have been noisier, but we didn’t test it out. - •\tStreet parking is a little competitive and cars have to be moved off the street in the later afternoon when the parking lane becomes a traffic lane. This was not an issue for us since we were gone pretty much all day long. - Everything was as it was presented by Natalia, who was a thoughtful and attentive hostess. We were in town to help our daughter move into an apartment walking distance from the Air BnB. We hope to stay here again on return visits.\"\r",
+      "\r\n"
+     ]
+    }
+   ],
    "source": [
-    "#!head dbpedia_csv/train.csv -n 3\n",
-    "!head train.csv -n 3"
+    "!head {prefix}/train.csv -n 3"
    ]
   },
   {
@@ -449,12 +480,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "﻿NotGreat\r",
+      "\r\n",
+      "Great"
+     ]
+    }
+   ],
    "source": [
-    "#!cat dbpedia_csv/classes.txt\n",
-    "!cat classes.txt\n"
+    "!cat {prefix}/classes.txt\n"
    ]
   },
   {
@@ -466,9 +506,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'0': 'NotGreat', '1': 'Great'}\n"
+     ]
+    }
+   ],
    "source": [
     "#index_to_label = {} \n",
     "#with open(\"dbpedia_csv/classes.txt\") as f:\n",
@@ -500,9 +548,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/ec2-user/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from random import shuffle\n",
     "import multiprocessing\n",
@@ -514,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,9 +627,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 55.1 ms, sys: 45 ms, total: 100 ms\n",
+      "Wall time: 898 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -586,9 +662,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 35.9 ms, sys: 20.1 ms, total: 56 ms\n",
+      "Wall time: 205 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -611,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,9 +722,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using SageMaker BlazingText container: 825641698319.dkr.ecr.us-east-2.amazonaws.com/blazingtext:latest (us-east-2)\n"
+     ]
+    }
+   ],
    "source": [
     "container = sagemaker.amazon.amazon_estimator.get_image_uri(region_name, \"blazingtext\", \"latest\")\n",
     "print('Using SageMaker BlazingText container: {} ({})'.format(container, region_name))"
@@ -692,14 +785,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "bt_model = sagemaker.estimator.Estimator(container,\n",
     "                                         role, \n",
     "                                         train_instance_count=1, \n",
-    "                                         train_instance_type='ml.c4.4xlarge',\n",
+    "                                         train_instance_type='ml.c4.xlarge',\n",
     "                                         train_volume_size = 30,\n",
     "                                         train_max_run = 360000,\n",
     "                                         input_mode= 'File',\n",
@@ -716,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
