--- a/rga_ai_lab1_airbnb.ipynb
+++ b/rga_ai_lab1_airbnb.ipynb
@@ -445,10 +445,10 @@
     "printmd(\"**Uncompress predictions:**\")\n",
     "!tar -xvzf comprehend/output.tar.gz -C comprehend\n",
     "\n",
-    "printmd(\"**Review groundtruth (first 20):**\")\n",
+    "printmd(\"**Review groundtruth (first 5):**\")\n",
     "!head comprehend/airbnb-reviews-holdout-groundtruth.csv -n 5\n",
     "\n",
-    "printmd(\"**Review predictions (first 20):**\")\n",
+    "printmd(\"**Review predictions (first 5):**\")\n",
     "!head comprehend/predictions.jsonl -n 5"
    ]
   },
@@ -601,7 +601,7 @@
    "metadata": {},
    "source": [
     "## Data Preprocessing\n",
-    "We need to preprocess the training data into **space separated tokenized text** format which can be consumed by `BlazingText` algorithm. Also, as mentioned previously, the class label(s) should be prefixed with `__label__` and it should be present in the same line along with the original sentence. We'll use `nltk` library to tokenize the input sentences from DBPedia dataset. "
+    "We need to preprocess the training data into **space separated tokenized text** format which can be consumed by `BlazingText` algorithm. Also, as mentioned previously, the class label(s) should be prefixed with `__label__` and it should be present in the same line along with the original sentence. We'll use `nltk` library to tokenize the input sentences from our dataset. "
    ]
   },
   {
@@ -801,7 +801,7 @@
     "|   Single GPU instance  \t|   ✔  \t|     ✔    \t|                \t|  ✔ (Instance with 1 GPU only)  |\n",
     "| Multiple CPU instances \t|      \t|          \t|        ✔       \t|     | |\n",
     "\n",
-    "Now, let's define the SageMaker `Estimator` with resource configurations and hyperparameters to train Text Classification on *DBPedia* dataset, using \"supervised\" mode on a `c4.4xlarge` instance.\n"
+    "Now, let's define the SageMaker `Estimator` with resource configurations and hyperparameters to train Text Classification on *DBPedia* dataset, using \"supervised\" mode on a `m5.large` instance.\n"
    ]
   },
   {
@@ -929,15 +929,27 @@
     "#pool.join()\n",
     "\n",
     "#print(all_rows[0][0])\n",
-    "#print(all_rows[0][2])\n",
-    "\n",
-    "\n",
-    "\n",
+    "#print(all_rows[0][2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By default, the model will return only one prediction, the one with the highest probability. For retrieving the top k predictions, you can set `k` in the configuration as shown below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#sentences = [\"Convair was an american aircraft manufacturing company which later expanded into rockets and spacecraft.\",\n",
     "#            \"Berwick secondary college is situated in the outer melbourne metropolitan suburb of berwick .\"]\n",
     "\n",
     "# The test data consists of 30 sentences (0-29), select a sentence to validate the prediction\n",
-    "sentence = 29\n",
+    "sentence = 10\n",
     "\n",
     "sentences = [all_rows[sentence][2]]\n",
     "\n",
@@ -957,29 +969,7 @@
     "predictions = json.loads(response)\n",
     "\n",
     "printmd(\"**Prediction:**\")\n",
-    "print(json.dumps(predictions, indent=2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By default, the model will return only one prediction, the one with the highest probability. For retrieving the top k predictions, you can set `k` in the configuration as shown below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "payload = {\"instances\" : tokenized_sentences,\n",
-    "          \"configuration\": {\"k\": 2}}\n",
-    "\n",
-    "response = text_classifier.predict(json.dumps(payload))\n",
-    "\n",
-    "predictions = json.loads(response)\n",
-    "print(json.dumps(predictions, indent=2))"
+    "print(json.dumps(predictions, indent=2))\n"
    ]
   },
   {
@@ -1004,7 +994,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# COPY CUSTOMER CODE"
+    "# COPY CUSTOMER CODE\n"
    ]
   },
   {
