Update notebooks & add instruction images

--- a/rga_ai_lab1-2_airbnb.ipynb
+++ b/rga_ai_lab1-2_airbnb.ipynb
@@ -4,8 +4,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Introduction\n",
+    "\n",
+    "We will illustrate the different ways you can consume AI/ML services in AWS with this notebook. We see the Machine Learning stack having three key layers: **Frameworks and Interfaces** for machine learning practitioners, **Platform Services** that make it easy for any developer to get started and get deep with ML, and **Application Services** that enable developers to plug-in pre-built AI functionality into their apps without having to worry about the machine learning models that power these services.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Lab 1 AWS Application Services Layer - Amazon Comprehend\n",
+    "\n",
+    "**Application services** serve developers and companies who want to add solution-oriented intelligence to their applications through an API call rather than developing and training their own models. For example, in computer vision, we developed Amazon Rekognition to allow developers to easily build intelligent video and image analysis into their applications. [C-SPAN](https://aws.amazon.com/solutions/case-studies/cspan/) is using Amazon Rekognition to automate footage tagging, and prior to Rekognition, they could only index about half of their footage due to the immense amount of manual processes. But, they were able to build a solution using Rekognition in 3 weeks, and can now scan all their footage to identify and retrieve 99,000 political figures, saving approximately 9,000 hours a year in labor.\n",
+    "\n",
+    "**Lab 1** will use **Amazon Comprehend** a service that uses machine learning to find insights and relationships in text. Amazon Comprehend can identify the language of the text; extract key phrases, places, people, brands, or events; understand how positive or negative the text is; and automatically organize a collection of text files by topic.\n",
+    "\n",
+    "We will show how to extract sentiment, entities, and key phases using the native service with no ML training required. Next, we will show how to train a Comprehend [Custom Classification model](https://docs.aws.amazon.com/comprehend/latest/dg/how-document-classification.html) using the R/GA AirBnb dataset of 1,300 reviews which are labeled great or notgreat to indicate the really amazing 5-star reviews (great) vs the other 5-star reviews not as good. We will use this custom model to score additional reviews.\n",
+    "\n",
+    "## Lab 2 AWS Platform Services Layer - Amazon Sagemaker\n",
+    "\n",
+    "The Platform Layer provides an end-to-end platform to coordinate the ML workflow in a seamless and easy way using Amazon Sagemaker. SageMaker removes the complexity that holds back developer success with the many steps in the ML workflow such as: data collection & preparation, algorithm & framework selection, model training & tuning, and model deployment. SageMaker includes modules that can be used together or independently to build, train, and deploy your machine learning models. SageMaker makes it easy to build ML models and get them ready for training by providing everything you need to quickly connect to your training data, and to select and optimize the best algorithm and framework for your application. Amazon SageMaker includes hosted Jupyter notebooks that make it is easy to explore and visualize your training data stored in Amazon S3. You can connect directly to data in S3, or use AWS Glue to move data from Amazon RDS, Amazon DynamoDB, and Amazon Redshift into S3 for analysis in your notebook. SageMaker [includes several common machine learning algorithms](https://docs.aws.amazon.com/sagemaker/latest/dg/algos.html) which have been pre-installed and optimized to deliver up to 10 times the performance you’ll find running these algorithms anywhere else.\n",
+    "\n",
+    "**Lab 2** will use Sagemaker and a built-in algorithm for natural language processing (NLP) called BlazingText to train a model with the same Airbnb dataset. Once trained we will host a model on a high-level available endpoint hosted in Sagemaker, and we will call that endpoint to provide inference for additional reviews.\n",
+    "\n",
+    "## AWS Frameworks and Interfaces\n",
+    "The Frameworks and interfaces layer is for the expert machine learning practitioners. These are people comfortable building deep learning models, working with deep learning frameworks, building clusters, etc. They can get extremely deep. For this group, the most of machine learning and deep learning being done on the cloud today are being done on AWS with our GPU instances - which are optimized for ML and DL. In 2017, we launched the P3 instance, which is fourteen times faster than the P2 instance. P3 provides a huge boost to the speed and efficiency of deep learning and machine learning workloads.\n",
+    "\n",
+    "AWS provides choice with regards to frameworks we support and offer (ie Tensorflow, Caffe2, MXNet, Keras, CNTK), we strive to support them all. We will always provide a great solution for all the frameworks and choices that people want to make.\n",
+    "\n",
+    "**Lab 3** will demonstrate using a pre-existing model [RoBERTa](https://github.com/pytorch/fairseq/tree/master/examples/roberta) with the same AirBnb dataset hosted in a Jupyter notebook within our Sagemaker notebook. We will run the model directly from our Sagemaker notebook, if desired you can [host custom models in Sagemaker](https://docs.aws.amazon.com/sagemaker/latest/dg/your-algorithms.html).\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Lab 1 -- Comprehend Lab\n",
-    "Text Classification can be used to solve various use-cases like sentiment analysis, spam detection, hashtag prediction etc. This notebook demonstrates the use of SageMaker BlazingText to perform supervised binary/multi class with single or multi label text classification."
+    "Text Classification can be used to solve various use-cases like sentiment analysis, spam detection, hashtag prediction etc.\n",
+    "\n",
+    "Amazon Comprehend uses natural language processing (NLP) to extract insights about the content of documents. Amazon Comprehend processes any text file in UTF-8 format. It develops insights by recognizing the entities, key phrases, language, sentiments, and other common elements in a document. Use Amazon Comprehend to create new products based on understanding the structure of documents. For example, using Amazon Comprehend you can search social networking feeds for mentions of products or scan an entire document repository for key phrases.\n",
+    "\n",
+    "You work with one or more documents at a time to evaluate their content and gain insights about them. Some of the insights that Amazon Comprehend develops about a document include:\n",
+    "\n",
+    "- **Entities** – Amazon Comprehend returns a list of entities, such as people, places, and locations, identified in a document. For more information, see Detect Entities.\n",
+    "\n",
+    "- **Key phrases** – Amazon Comprehend extracts key phrases that appear in a document. For example, a document about a basketball game might return the names of the teams, the name of the venue, and the final score. For more information, see Locate Key Phrases.\n",
+    "\n",
+    "- **Language** – Amazon Comprehend identifies the dominant language in a document. Amazon Comprehend can identify 100 languages. For more information, see Detect the Dominant Language.\n",
+    "\n",
+    "- **Sentiment** – Amazon Comprehend determines the emotional sentiment of a document. Sentiment can be positive, neutral, negative, or mixed. For more information, see Determine the Sentiment.\n",
+    "\n",
+    "- **Syntax** – Amazon Comprehend parses each word in your document and determines the part of speech for the word. For example, in the sentence \"It is raining today in Seattle,\" \"it\" is identified as a pronoun, \"raining\" is identified as a verb, and \"Seattle\" is identified as a proper noun. For more information, see Analyze Syntax.\n",
+    "    \n",
+    "More information about Amazon Comprehend is [here](https://docs.aws.amazon.com/comprehend/latest/dg/what-is.html)."
    ]
   },
   {
@@ -35,7 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Prepare for the lab by learning the current IAM Role and the S3 bucket we will use...\n",
+    "#Prepare for the lab by learning the current IAM Role and the S3 bucket we will use...We will need to update the\n",
+    "#IAM role. Please review the README.md of the Git repo for me details.\n",
     "\n",
     "sess = sagemaker.Session()\n",
     "\n",
@@ -59,6 +111,7 @@
    "metadata": {},
    "source": [
     "## Instructions to Update the IAM Role for the Sagemaker Notebook\n",
+    "Please follow the \n",
     "Need to provide access to:\n",
     "\n",
     "- The S3 bucket we will create\n",
@@ -132,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CREATE THE BUCKET IN YOUR AWS AWS ACCT to be used for the dataset\n",
+    "#CREATE THE BUCKET IN YOUR AWS ACCT to be used for the dataset\n",
     "def create_bucket(bucket_name, region=None):\n",
     "    \"\"\"Create an S3 bucket in a specified region\n",
     "\n",
@@ -157,7 +210,7 @@
     "    except ClientError as e:\n",
     "        logging.error(e)\n",
     "        return False\n",
-    "    return print(bucket + ' bucket created successfully!')\n",
+    "    return print(bucket + ' S3 bucket created successfully!')\n",
     "\n",
     "create_bucket(bucket, region)"
    ]
@@ -177,9 +230,10 @@
     "!head comprehend/airbnb-reviews-training.csv -n 2\n",
     "\n",
     "# We are assuming that the data transformations have occurred upstream and we have formated the data required for\n",
-    "# Comprehend. Note that the data has two columns, the first is a custom label for 'great' or 'notgreat' to indicate\n",
-    "# the custom labels that have been applied. This is the format required for the Comprehend custom classifier.\n",
-    "# The first column is the custom label, the second column contains the raw review.\n"
+    "# Comprehend in the dataset included in the repo. Note that the data has two columns (comma separated), \n",
+    "# the first is a custom label for 'great' or 'notgreat' to indicate the custom labels that have been applied.\n",
+    "# This is the format required for the Comprehend custom classifier. The first column is the custom label,\n",
+    "# the second column contains the raw review.\n"
    ]
   },
   {
@@ -221,28 +275,9 @@
    "source": [
     "## Create IAM Role for Comprehend to read S3 data from your bucket\n",
     "\n",
-    "**Create Data Access Role for Comprehend custom classifier job:**\n",
+    "Comprehend requires permissions to access the dataset in S3. In order to do this we will create an IAM role (Data Access Role) with the required policies to allow Comprehend to assume this role. This role has rights to read from the S3 bucket we created earlier as well as the following native Comprehend policy: _ComprehendDataAccessRolePolicy_.\n",
     "\n",
-    "\n",
-    "**Create Policy:**\n",
-    "\n",
-    "`\n",
-    "{\n",
-    "    \"Version\": \"2012-10-17\",\n",
-    "    \"Statement\": {\n",
-    "        \"Effect\": \"Allow\",\n",
-    "        \"Action\": [\n",
-    "            \"s3:GetObject\",\n",
-    "            \"s3:ListBucket\",\n",
-    "            \"s3:PutObject\"\n",
-    "        ],\n",
-    "        \"Resource\": [\n",
-    "            \"arn:aws:s3:::UPDATEBUCKETNAMEHERE\"\n",
-    "        ]\n",
-    "    }\n",
-    "}\n",
-    "`\n",
-    "\n"
+    "Please see the Comprehend docs for more detail [here](https://docs.aws.amazon.com/comprehend/latest/dg/access-control-managing-permissions.html#auth-role-permissions)."
    ]
   },
   {
@@ -319,12 +354,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build the Comprehend Custom Classifier\n",
+    "You can customize Comprehend for your specific requirements without the skillset required to build machine learning-based NLP solutions. Using automatic machine learning, or AutoML, Comprehend Custom builds customized NLP models on your behalf, using data you already have.\n",
+    "\n",
+    "Amazon Comprehend uses a proprietary, state-of-the-art sequence tagging deep neural network model that powers the same Amazon Comprehend detect entities service to train your custom entity recognizer models. In addition, we understand that acquiring training data could be costly. To help customers build a highly accurate model with limited amount of data, Amazon Comprehend uses a technique called transfer learning to train your custom models based on an sophisticated general-purpose entities recognition model that was pre-trained with a large amount of data we collected from multiple domains. Offline experiments showed that transfer learning significantly improved custom entity recognizer model accuracy especially when the amount of training data is small.\n",
+    "\n",
+    "To learn more about training a Comprehend Custom Classifier please review the docs [here](https://docs.aws.amazon.com/comprehend/latest/dg/how-document-classification-training.html).\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instantiate Boto3 SDK:\n",
+    "# CREATE THE COMPREHEND CUSTOM CLASSIFIER\n",
     "client = boto3.client('comprehend', region_name=region)\n",
     "s3_uri = 's3://' + bucket + '/' + prefix + '/' + 'airbnb-reviews-training.csv'\n",
     "\n",
@@ -351,7 +398,10 @@
     "describe_response = client.describe_document_classifier(\n",
     "    DocumentClassifierArn=docclassifierarn)\n",
     "printmd(\"**Describe response output:**\")\n",
-    "print(str(describe_response))\n"
+    "print(str(describe_response))\n",
+    "\n",
+    "# Review the output below, we have requested that the Comprehend customer classifier be created. It should take \n",
+    "# Several minutes to train the model using the AirBnb dataset\n"
    ]
   },
   {
@@ -361,7 +411,7 @@
    "outputs": [],
    "source": [
     "# Check the status of the classifier\n",
-    "# Look for a status on TRAINED before moving to the next step\n",
+    "# Look for a status on TRAINED before moving on to the next step\n",
     "describe_response = client.describe_document_classifier(DocumentClassifierArn=docclassifierarn)\n",
     "printmd(\"**Document classifier status (Wait for the status to show TRAINED):**\")\n",
     "print(describe_response['DocumentClassifierProperties']['Status'])\n",
@@ -373,7 +423,9 @@
     "printmd(\"**Custom Model Accuracy:**\")\n",
     "print(str(describe_response['DocumentClassifierProperties']['ClassifierMetadata']['EvaluationMetrics']))\n",
     "\n",
-    "# Alternatively please review the Comprehend AWS Console GUI to validate if your custom job is still training"
+    "# Alternatively please review the Comprehend AWS Console GUI to validate if your custom job is still training\n",
+    "# Please note the output below, the custom model accuracy is tested and provided in the output of the model after\n",
+    "# training is complete."
    ]
   },
   {
@@ -450,6 +502,23 @@
     "\n",
     "printmd(\"**Review predictions (first 5):**\")\n",
     "!head comprehend/predictions.jsonl -n 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Review \n",
+    "\n",
+    "predict=1\n",
+    "\n",
+    "printmd(\"**Review groundtruth:**\")\n",
+    "!sed '{predict}!d' comprehend/airbnb-reviews-holdout-groundtruth.csv\n",
+    "\n",
+    "printmd(\"**Review predictions:**\")\n",
+    "!sed '{predict}!d' comprehend/predictions.jsonl"
    ]
   },
   {
@@ -880,7 +949,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt_model.fit(inputs=data_channels, logs=True)"
+    "bt_model.fit(inputs=data_channels, logs=True)\n",
+    "\n",
+    "## Review the output below to see the model statistics and accuracy"
    ]
   },
   {
@@ -945,10 +1016,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sentences = [\"Convair was an american aircraft manufacturing company which later expanded into rockets and spacecraft.\",\n",
-    "#            \"Berwick secondary college is situated in the outer melbourne metropolitan suburb of berwick .\"]\n",
-    "\n",
-    "# The test data consists of 30 sentences (0-29), select a sentence to validate the prediction\n",
+    "# The test data consists of 30 Airbnb reviews (0-29), select a sentence to validate the prediction\n",
     "sentence = 10\n",
     "\n",
     "sentences = [all_rows[sentence][2]]\n",
