Readme & Notebook update

--- a/rga_ai_lab1-2_airbnb.ipynb
+++ b/rga_ai_lab1-2_airbnb.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "**Lab 2** will use Sagemaker and a built-in algorithm for natural language processing (NLP) called BlazingText to train a model with the same Airbnb dataset. Once trained we will host a model on a high-level available endpoint hosted in Sagemaker, and we will call that endpoint to provide inference for additional reviews.\n",
     "\n",
-    "## AWS Frameworks and Interfaces\n",
+    "## Lab 3 AWS Frameworks and Interfaces\n",
     "The Frameworks and interfaces layer is for the expert machine learning practitioners. These are people comfortable building deep learning models, working with deep learning frameworks, building clusters, etc. They can get extremely deep. For this group, the most of machine learning and deep learning being done on the cloud today are being done on AWS with our GPU instances - which are optimized for ML and DL. In 2017, we launched the P3 instance, which is fourteen times faster than the P2 instance. P3 provides a huge boost to the speed and efficiency of deep learning and machine learning workloads.\n",
     "\n",
     "AWS provides choice with regards to frameworks we support and offer (ie Tensorflow, Caffe2, MXNet, Keras, CNTK), we strive to support them all. We will always provide a great solution for all the frameworks and choices that people want to make.\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +82,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:iam::683164714817:role/service-role/AmazonSageMaker-ExecutionRole-20191016T110583\n",
+      "The S3 bucket you will be using to upload your dataset is: rga-aws-ai-workshop-pod-9998\n"
+     ]
+    }
+   ],
    "source": [
     "#Prepare for the lab by learning the current IAM Role and the S3 bucket we will use...We will need to update the\n",
     "#IAM role. Please review the README.md of the Git repo for me details.\n",
